typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName19.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            25,
        ),
        hi: BytePos(
            29,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName19.ts:2:10
  |
2 | var v: { [e]? };
  |          ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            26,
        ),
        hi: BytePos(
            27,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName19.ts:2:11
  |
2 | var v: { [e]? };
  |           ^

